[package]
name = "private-box"
description = "A direct port of https://github.com/auditdrivencrypto/private-box"
version = "0.3.3"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
license = "MIT"
repository = "https://github.com/pietgeursen/private-box-rs"

[dependencies]
libsodium-sys = "0.0.16"
sodiumoxide = "0.0.16"
arrayref = "0.3.4"
rayon = "0.9"

[dev-dependencies]
base64 = "0.9"
serde = "1.0.27"
serde_json = "1.0"
serde_derive = "1.0.27"
