[package]
name = "private-box"
description = "A direct port of https://github.com/auditdrivencrypto/private-box"
version = "0.5.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
license = "MIT"
repository = "https://github.com/pietgeursen/private-box-rs"
edition = "2018"
documentation = "https://docs.rs/private-box"
readme = "README.md"
keywords = ["ssb", "scuttlebutt"]

[dependencies]
ssb-crypto = "~0.1.1"

[dev-dependencies]
base64 = "0.9"
serde = "1.0.27"
serde_json = "1.0"
serde_derive = "1.0.27"
