[package]
name = "private-box"
description = "A direct port of https://github.com/auditdrivencrypto/private-box"
version = "0.6.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/pietgeursen/private-box-rs"
edition = "2018"
documentation = "https://docs.rs/private-box"
readme = "README.md"
keywords = ["ssb", "scuttlebutt"]

[dependencies]
ssb-crypto = "0.2.1"
zerocopy = "0.3.0"

[dev-dependencies]
base64 = "~0.10.1"
serde = "~1.0.90"
serde_json = "~1.0.39"
serde_derive = "~1.0.90"
